--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@
 		text-transform: lowercase;
 
 		color: var(--todoApp-red);
+		opacity: 0.5;
 	}
 
 	& input::placeholder {
@@ -28,10 +29,13 @@
 
 	& button {
 		margin: 0;
-		padding: 0;
+		width: min-content;
+		padding: 0.5rem;
 
 		appearance: none;
 		border: 0;
+		border-radius: 100%;
+
 		background: none;
 		color: inherit;
 		vertical-align: baseline;
@@ -39,14 +43,32 @@
 		font-family: inherit;
 		font-weight: inherit;
 		font-size: 100%;
+
+		display: grid;
+		place-content: center;
 	}
 
 	& button:hover,
-	& label {
+	& label:hover {
 		cursor: pointer;
+	}
+
+	& button:hover {
+		color: var(--todoApp-red-darkTheme);
+		background-color: var(--text-color2);
 	}
 
 	& button:disabled {
 		cursor: inherit;
 	}
+
+	& button:active {
+		outline: none;
+		box-shadow: var(--todoApp-shadow-inner);
+	}
+}
+
+.icon {
+	width: 1.5rem;
+	height: 1.5rem;
 }
