--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,25 @@
 * {
+	--background-color-lightTheme: #f5f5f5;
+	--text-color-lightTheme: #7e7e7e;
+	--text-color2-lightTheme: #dcdcdc;
+	--todoApp-background-lightTheme: #fff;
+	--todoApp-text-color-lightTheme: #8e8e8e;
+	--todoApp-red-lightTheme: #af2f2f;
+	--todoApp-shadow-lightTheme: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+		0 25px 50px 0 rgba(0, 0, 0, 0.1);
+	--todoApp-shadow-inner-lightTheme: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+	--todoApp-shadow-inner-sm-lightTheme: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+
+	--background-color-darkTheme: #242528;
+	--text-color-darkTheme: #e2e3e9;
+	--text-color2-darkTheme: #444444;
+	--todoApp-red-darkTheme: #af2f2f;
+	--todoApp-background-darkTheme: #4d4d4d;
+	--todoApp-shadow-darkTheme: 0 2px 4px 0 rgba(0, 0, 0, 0.8),
+		0 25px 50px 0 rgba(0, 0, 0, 0.9);
+	--todoApp-shadow-inner-darkTheme: inset 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+	--todoApp-shadow-inner-sm-darkTheme: inset 0 -2px 1px rgba(0, 0, 0, 0.3);
+
 	box-sizing: border-box;
 
 	&:focus {
@@ -7,30 +28,24 @@
 }
 
 :where(body) {
-	--background-color: #f5f5f5;
-	--text-color: #4d4d4d;
-	--todoApp-background: #fff;
-	--todoApp-text-color: #8e8e8e;
-	--todoApp-red: rgba(175, 47, 47, 0.15);
-	--todoApp-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-		0 25px 50px 0 rgba(0, 0, 0, 0.1);
-	--todoApp-shadow-inner: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
-	--todoApp-shadow-inner-sm: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
-
-	--background-color-darkTheme: hsl(228, 5%, 15%);
-	--text-color-darkTheme: hsl(230, 12%, 90%);
-	--todoApp-red-darkTheme: rgba(175, 47, 47, 0.75);
-	--todoApp-background-darkTheme: #4d4d4d;
-	--todoApp-shadow-darkTheme: 0 2px 4px 0 rgba(0, 0, 0, 0.8),
-		0 25px 50px 0 rgba(0, 0, 0, 0.9);
-	--todoApp-shadow-inner-sm-darkTheme: inset 0 -2px 1px rgba(0, 0, 0, 0.3);
+	--background-color: var(--background-color-lightTheme);
+	--text-color: var(--text-color-lightTheme);
+	--text-color2: var(--text-color2-lightTheme);
+	--todoApp-red: var(--todoApp-red-lightTheme);
+	--todoApp-background: var(--todoApp-background-lightTheme);
+	--todoApp-shadow: var(--todoApp-shadow-lightTheme);
+	--todoApp-shadow-inner: var(--todoApp-shadow-inner-lightTheme);
+	--todoApp-shadow-inner-sm: var(--todoApp-shadow-inner-sm-lightTheme);
 
 	@media (prefers-color-scheme: dark) {
 		--background-color: var(--background-color-darkTheme);
 		--text-color: var(--text-color-darkTheme);
+		--text-color2: var(--text-color2-darkTheme);
 		--todoApp-red: var(--todoApp-red-darkTheme);
 		--todoApp-background: var(--todoApp-background-darkTheme);
 		--todoApp-shadow: var(--todoApp-shadow-darkTheme);
+		--todoApp-shadow-inner: var(--todoApp-shadow-inner-darkTheme);
+		--todoApp-shadow-inner-sm: var(--todoApp-shadow-inner-sm-darkTheme);
 	}
 }
 
