--- a/src/components/AddTodo/AddTodo.module.scss
+++ b/src/components/AddTodo/AddTodo.module.scss
@@ -15,5 +15,5 @@
 	border: none;
 
 	background: rgba(0, 0, 0, 0.006);
-	box-shadow: var(--todoApp-shadow-inner-sm);
+	box-shadow: var(--todoApp-shadow-inner);
 }
