--- a/src/containers/TodoFooter/TodoFooter.module.scss
+++ b/src/containers/TodoFooter/TodoFooter.module.scss
@@ -10,6 +10,8 @@
 
 	border-top: 1px solid var(--text-color2);
 
+	z-index: 1;
+
 	&::before {
 		content: "";
 		position: absolute;
@@ -19,6 +21,8 @@
 
 		height: 2rem;
 		overflow: hidden;
+
+		z-index: -1;
 
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
 			0 8px 0 -3px var(--todoApp-background), 0 9px 1px -3px rgba(0, 0, 0, 0.2),
