--- a/src/containers/TodoFooter/TodoFooter.module.scss
+++ b/src/containers/TodoFooter/TodoFooter.module.scss
@@ -3,13 +3,13 @@
 
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: baseline;
 
-	padding: 0.75rem;
+	padding-inline: 0.75rem;
+	padding-block: 0.3rem 0.25rem;
 	margin-bottom: 3rem;
 
-	border-top: 1px solid var(--text-color2);
-
+	font-size: 1rem;
 	z-index: 1;
 
 	&::before {
