style: minor css improve

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 	box-sizing: border-box;
 
 	&:focus {
-		outline: 1px solid var(--todoApp-red-darkTheme);
+		outline: 1px solid var(--todoApp-red);
 	}
 }
 
