--- a/src/components/TodosClearAllCompleted/TodosClearAllCompleted.module.scss
+++ b/src/components/TodosClearAllCompleted/TodosClearAllCompleted.module.scss
@@ -1,19 +1,5 @@
 @use "../../styles/extends.scss";
 
 .clearAll {
-	@extend %btn;
-
-	min-width: fit-content;
-	border-radius: 0;
-
-	&:hover {
-		background-color: transparent;
-		text-decoration: underline;
-		color: var(--todoApp-color);
-	}
-
-	&:focus {
-		outline: none;
-		color: var(--todoApp-red);
-	}
+	@extend %link;
 }
