--- a/src/containers/TodoFooter/TodoFooter.module.scss
+++ b/src/containers/TodoFooter/TodoFooter.module.scss
@@ -6,7 +6,7 @@
 	align-items: baseline;
 
 	padding-inline: 0.75rem;
-	padding-block: 0.3rem 0.25rem;
+	padding-top: 0.25rem;
 	margin-bottom: 3rem;
 
 	font-size: 1rem;
@@ -19,7 +19,7 @@
 		bottom: 0;
 		left: 0;
 
-		height: 2rem;
+		height: 1rem;
 		overflow: hidden;
 
 		z-index: -1;
