--- a/src/components/TodoItem/TodoComplete/TodoComplete.module.scss
+++ b/src/components/TodoItem/TodoComplete/TodoComplete.module.scss
@@ -7,10 +7,9 @@
 	height: 2rem;
 
 	border: 1px solid var(--text-color);
-	outline-offset: 2px;
 
 	&:hover {
-		color: var(--todoApp-red);
+		color: var(--todoApp-green);
 		border-color: var(--todoApp-red);
 		background-color: transparent;
 	}
@@ -26,7 +25,6 @@
 	@extend .complete;
 
 	color: var(--todoApp-green);
-	border-color: var(--todoApp-green);
 }
 
 .icon {
