--- a/src/containers/TodoFooter/TodoFooter.module.scss
+++ b/src/containers/TodoFooter/TodoFooter.module.scss
@@ -7,7 +7,7 @@
 	align-items: baseline;
 
 	padding-inline: 0.75rem;
-	padding-top: 0.25rem;
+	padding-block: 0.25rem;
 	margin-bottom: 3rem;
 
 	font-size: 1rem;
